fix text sizing on tablet

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -621,6 +621,13 @@ footer a {
     align-items: center;
   }
 
+  h3 {
+    font-size: 0.9em;
+  }
+  p {
+    font-size: 0.75em;
+  }
+
   .nav-header {
     gap: 40%;
     a {
